--- a/src/sass/templates/_projects.sass
+++ b/src/sass/templates/_projects.sass
@@ -2,6 +2,7 @@
   color: $primary
   font-size: 1.929rem
   font-weight: normal
+  letter-spacing: -0.07em
 .projects
   padding-top: 9.12rem
 .row
